# src/validators/params/CacheInSecondsSchema.js
@@ -1,0 +1,8 @@
+const Joi = require('@hapi/joi');
+
+const CacheInSecondsSchema = Joi.object()
+    .keys({
+      cacheInSeconds: Joi.number().integer().min(0).default(10),
+    });
+
+module.exports = CacheInSecondsSchema;
